--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -142,4 +142,23 @@
 	#product-carousel .carousel-control.right {
 		right: 0;
 	}
+	.others-products {
+		margin-left: 15px;
+		margin-right: 15px;
+	}
+	.slick-next, .slick-prev {
+		font-size: 1.8em;
+	}
+	#products a.fix-list {
+		display: block;
+	}
+}
+
+@media (max-width: 331px) {
+	.links-socials {
+		margin-bottom: 10px;
+	}
+	.products {
+		padding-top: 110px;
+	}
 }
